# E-Commerce-Shop

./: .env.example  .gitignore  DESIGN_UPDATES.md  DOCKER.md  README.md  TODO.md  docker-compose.yml  flake.nix  project-instructions.md
backend/: Dockerfile  README.md  auth_utils.py  config.py  database.py  dependencies.py  init_sample_data.py  jwt_utils.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: auth.py  cart.py  orders.py  products.py
database/: schema.sql
database/migrations/: 001_add_image_blob_columns.sql
frontend/: .dockerignore  Dockerfile  IMAGE_UPLOAD_TODO.md  angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/guards/: admin.guard.ts  auth.guard.ts  unsaved-changes.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/interfaces/: can-component-deactivate.interface.ts
frontend/src/app/core/models/: product.model.ts  user.model.ts
frontend/src/app/core/services/: admin-order.service.ts  auth.service.ts  cart.service.ts  order.service.ts  product.service.ts
frontend/src/app/features/cart/: cart.component.html  cart.component.scss  cart.component.ts
frontend/src/app/features/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/features/order-detail/: order-detail.component.html  order-detail.component.scss  order-detail.component.ts
frontend/src/environments/: environment.development.ts  environment.ts
(+30 files in other folders)
