[project]
name = "ecommerce-backend"
version = "1.0.0"
description = "E-Commerce Shop Backend API with FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "aiomysql==0.2.0",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart==0.0.18",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
